fixed spacing on standard layout

--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -598,7 +598,7 @@
   
   @media (min-width: 768px) {
     .main-page-jumbo-video.main-page-jumbo-sub-video {
-      height: 160px;
+      height: 135px;
       width: 210px;
     }
   }
